--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,82 @@
 .App {
   text-align: center;
   height: 100vh;
+  color: #394648;
+  box-shadow: .5px .5px .5px 1;
+  text-shadow: 0 .025px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.navbar-title {
+  display: flex;
+  flex-direction: row;
+  align-items:baseline;
+  justify-content: left;
+  position: sticky;
+  top: 0;
+  font-weight: 300;
+  margin-left: 45px;
+  font-size: 1.2em;
+  text-align: left;
   }
+
+  .heading {
+  margin-bottom: 25px;
+  font-size: 2em;
+  }
+
+.greeting {
+  display: block;
+  float: right;
+  font-size: small;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.button {
+  display: block;
+  float: right;
+  position: relative;
+  bottom: 19px;
+}
+
+.auth {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 20px;
+  width: 50vw;
+  margin: 10px auto;
 }
 
-.App-link {
-  color: #61dafb;
+.box {
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.link-nav {
+  font-size: small;
+text-decoration: none;
+color: #394648;
+margin-top: 15px;
+}
+
+.label {
+display: flex;
+flex-direction: row;
+align-items:center;
+justify-content: space-around;
+margin-top: 25px;
+}
+
+.icon {
+margin-left: 5px;
+}
+
+.field {
+  width: 100%;
+}
+
+.submit {
+margin-top: 25px;
+margin-bottom: 25px;
+font-size: small;
 }
